--- a/my-website/pom.xml
+++ b/my-website/pom.xml
@@ -30,6 +30,14 @@
 
   <build>
     <finalName>my-website</finalName>
+    <resources>
+    <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+     <resource>
+       <directory>src/main/js</directory>
+     </resource>
+   </resources>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
